crates/reinhardt-pages/tests/ui/page/fail/missing_body.stderr
error: unexpected end of input, expected curly braces
 --> tests/ui/page/fail/missing_body.rs:9:17
  |
9 |     let _invalid = page!(||);
  |                    ^^^^^^^^^
  |
  = note: this error originates in the macro `page` (in Nightly builds, run with -Z macro-backtrace for more info)
